# echo-jni

./: Cargo.toml  README.md  build.sh
src/: lib.rs
