[package]
name = "echo-jni"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = { version = "0.18", default-features = false }
android_logger = "0.8"

[profile.release]
opt-level = 'z'  # Optimize for size, faster load time
lto = true
